tests/bad/shadowing0.tig
let
    type a = { x : string }
    type b = a
    type a = { y : int }
in 
    3
end
